Adapted the ChangeLog so that it can be correctly visualized in the Browser using the !TracWikiRenderer introduced in [1611]
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1615 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/ChangeLog
+++ b/ChangeLog
@@ -52,7 +52,7 @@ http://svn.edgewall.com/repos/trac/tags/trac-0.8
    #818, #829, #830, #831, #833, #836, #844, #846, 
    #848, #850, #851, #852, #872, #873, #877, #878, 
    #885, #888, #889, #892, #901, #903, #907, #912, 
-   #916, #923, #929, #931, #932, #935.
+   #916, #923, #929, #931, #932, #935
 
 
 Trac 0.7.1 'Argento'  (Jun, 2004)
@@ -63,10 +63,10 @@ http://svn.edgewall.com/repos/trac/tags/trac-0.7.1
  * Experimental support for mod_python
  * Improved MIME-types
  * Fixed bugs: #93, #202, #307, #312, #342, #345, #350, #353, #355, #391,
-	#393, #401, #404, #406, #415, #417, #419, #420, #421, #422, #424,
-	#425, #428, #429, #432, #435, #437, #441, #442, #448, #451, #452,
-	#456, #457, #461, #463, #466, #467, #470, #, #497, #498, #502,
-	#504
+   #393, #401, #404, #406, #415, #417, #419, #420, #421, #422, #424,
+   #425, #428, #429, #432, #435, #437, #441, #442, #448, #451, #452,
+   #456, #457, #461, #463, #466, #467, #470, #497, #498, #502, #504
+
 
 Trac 0.7 'Fulci'  (May 18, 2004)
 http://svn.edgewall.com/repos/trac/tags/trac-0.7
@@ -92,16 +92,17 @@ http://svn.edgewall.com/repos/trac/tags/trac-0.7
  * Windows installer package.
  * More documentation.
  * Fixed bugs: #14, #19, #27, #62, #87, #96, #106, #111, #115, #127, #146,
-	#161, #166, #171, #180, #182, #183, #188, #190, #191, #192, #193,
-	#195, #196, #197, #201, #205, #207, #211, #212, #213, #220, #224,
-	#227, #228, #231, #233, #235, #236, #240, #241, #243, #244, #246,
-	#247, #248, #249, #251, #252, #253, #254, #255, #258, #259, #261,
-	#262, #263, #265, #270, #271, #273, #275, #277, #278, #281, #284,
-	#285,  #88, #289, #292, #293, #294, #296, #300, #302, #310, #313,
-	#314, #315, #316, #320, #322, #328, #332, #333, #337, #338, #339,
-	#340, #341, #344, #348, #349, #358, #361, #362, #363, #368, #370,
-	#371, #372, #376, #377, #378, #381, #384, #385, #386, #387, #388,
-	#392, #394, #396, #397, #398, #399, #402, #403, #410
+   #161, #166, #171, #180, #182, #183, #188, #190, #191, #192, #193,
+   #195, #196, #197, #201, #205, #207, #211, #212, #213, #220, #224,
+   #227, #228, #231, #233, #235, #236, #240, #241, #243, #244, #246,
+   #247, #248, #249, #251, #252, #253, #254, #255, #258, #259, #261,
+   #262, #263, #265, #270, #271, #273, #275, #277, #278, #281, #284,
+   #285,  #88, #289, #292, #293, #294, #296, #300, #302, #310, #313,
+   #314, #315, #316, #320, #322, #328, #332, #333, #337, #338, #339,
+   #340, #341, #344, #348, #349, #358, #361, #362, #363, #368, #370,
+   #371, #372, #376, #377, #378, #381, #384, #385, #386, #387, #388,
+   #392, #394, #396, #397, #398, #399, #402, #403, #410
+
 
 Trac 0.6.1 '245 Trioxin (April 12, 2004)
 http://svn.edgewall.com/repos/trac/tags/trac-0.6.1
@@ -112,6 +113,7 @@ http://svn.edgewall.com/repos/trac/tags/trac-0.6.1
  * Preliminary Windows Installer.
  * More documentation.
  * Fixed bugs: #163, #165, #189, #198, #200, #206, #209, #214, #223
+
 
 Trac 0.6 'Solanum' (March 23, 2004)
 http://svn.edgewall.com/repos/trac/tags/trac-0.6
@@ -132,10 +134,11 @@ http://svn.edgewall.com/repos/trac/tags/trac-0.6
  * Overall usability, consistency and cosmetic improvements.
  * More documentation.
  * Fixed bugs: #16, #68, #81, #88, #98, #101, #102, #103, #104, #105,
-               #110, #112, #113, #114, #117, #119, #120, #131, #132, #134,
-	       #135, #136, #138, #142, #145, #147, #151, #155, #170, #173,
-	       #174, #175, #177, #179
-	
+   #110, #112, #113, #114, #117, #119, #120, #131, #132, #134,
+   #135, #136, #138, #142, #145, #147, #151, #155, #170, #173,
+   #174, #175, #177, #179
+
+
 Trac 0.5.2 'Nameless' (March 2, 2004)
 http://svn.edgewall.com/repos/trac/tags/trac-0.5.2
 
@@ -152,17 +155,19 @@ http://svn.edgewall.com/repos/trac/tags/trac-0.5.2
  * Most of the inline css is removed.
  * IE6 navbar problem fixed.
  * Fixed bugs: #69, #73, #77, #78, #79, #80, #84, #85, #86, #89, #90, 
-               #91, #93, #97, 
-	
+   #91, #93, #97
+
+
 Trac 0.5.1 'Unnamed' (February 25, 2004)
 http://svn.edgewall.com/repos/trac/tags/trac-0.5.1
-	
+
  * Navbar now works properly on error pages.
  * Cleaned up source code. Removed ugly tabs.
  * Added missing COPYING, AUTHORS etc. Cleaned up package.
  * trac-admin now works with python 2.1.
- * Fixed bugs: #74, #75, #76, #77.
-	
+ * Fixed bugs: #74, #75, #76, #77
+
+
 Trac 0.5 'Incognito' (February 23, 2004)
 http://svn.edgewall.com/repos/trac/tags/trac-0.5
 
