--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Trac 0.8.2  (May 31, 2005)
+http://svn.edgewall.com/repos/trac/tags/trac-0.8.2
+
+ * Compatibility with Subversion >= 1.2 fixed.
+ * Compatibility with Docutils >= 1.3.7 fixed.
+ * Fixed bugs: #1020, #1302, #1500, #1182, #1339, #1518
+   #1525
+
+
 Trac 0.8.1  (Feb 28, 2005)
 http://svn.edgewall.com/repos/trac/tags/trac-0.8.1
 
