Allow the component manager to be a component with extension points itself. Based on initial implementation by Keir Mierle for [http://www.third-bit.com/trac/argon/ Argon].
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1785 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -23,6 +23,7 @@
  * Christopher Lenz        cmlenz@gmx.de
  * Ivo Looser              ivo.looser@login.ch
  * Angel Marin             anmar@gmx.net
+ * Keir Mierle             keir@cs.utoronto.ca
  * James Moger             jamesm@transonic.com
  * Tim Moloney             moloney@mrsl.com
  * Jennifer Murtell        jen@jmurtell.com
