Update a couple email addresses.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@2069 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -22,7 +22,7 @@
  * Nuutti Kotivuori        naked@iki.fi
  * Ian Leader              ian.leader@line.co.uk
  * Christopher Lenz        cmlenz@gmx.de
- * Ivo Looser              ivo.looser@login.ch
+ * Ivo Looser              ivo.looser@gmail.com
  * Angel Marin             anmar@gmx.net
  * Keir Mierle             keir@cs.utoronto.ca
  * James Moger             jamesm@transonic.com
@@ -33,7 +33,7 @@
  * Cap Petschulat          cap@cdres.com
  * Nicholas Riley          sabi
  * Manuzhai                manuzhai@gmail.com
- * Mark Rowe               mrowe@bluewire.net.nz
+ * Mark Rowe               mark.rowe@bdash.net.nz
  * Olliver Rutherfurd      ollie
  * pkou                    pkou@ua.fm
  * Michael Scherer         misc@mandrake.org
