Updated RELEASE, README and ChangeLog
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@2174 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/README
+++ b/README
@@ -6,7 +6,7 @@ tracking system. It provides an interface to the Subversion revision control
 systems, an integrated wiki, flexible issue tracking and convenient report
 facilities.
 
-Trac is distributed using the GNU General Public License.
+Trac is distributed using the modified BSD License.
 
  * For installation instructions, please see the INSTALL. *
  * If you are upgrading from a previous Trac version, please read UPGRADE. *
