--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,24 @@
+Trac 0.9-beta  (Sept 4, 2005)
+http://svn.edgewall.com/repos/trac/tags/trac-0.9-beta
+
+ Trac 0.9 contains a great number of new features, improvements and
+ bug fixes. The following list contains only a few highlights:
+	
+ * License changed from GPL to modified BSD (See the file COPYING).
+ * Improved modularity and extendibility (plugin support).
+ * Support for both pysqlite 1.x and pysqlite 2.x.
+ * Postgresql database support (with psycopg or pyPgSQL).
+ * Repository subsets. Multiple Trac environments can share a single 
+   repository.
+ * Version control abstraction layer making it possible to support 
+   other version control systems besides subversion in the future.
+ * FastCGI frontend support.
+ * Python version >= 2.3 is now required.
+
+ The complete list of closed tickets can be found here:
+   http://projects.edgewall.com/trac/query?status=closed&milestone=0.9
+
+	
 Trac 0.8.3  (Jun 15, 2005)
 http://svn.edgewall.com/repos/trac/tags/trac-0.8.3
 
