--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,9 @@
-Trac 0.9-beta  (Sept 4, 2005)
+Trac 0.9-beta1  (Sept 4, 2005)
 http://svn.edgewall.com/repos/trac/tags/trac-0.9-beta
 
  Trac 0.9 contains a great number of new features, improvements and
  bug fixes. The following list contains only a few highlights:
-	
+
  * License changed from GPL to modified BSD (See the file COPYING).
  * Improved modularity and extendibility (plugin support).
  * Support for both pysqlite 1.x and pysqlite 2.x.
