* Added my new email address  * removed WikiFormatting from UPGRADE (as it's written in ReST)  * marked soource:wiki-default/TracPlugins as being written in Trac wiki format
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@2202 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,6 +5,6 @@
  * Francois Harvey <fharvey@securiweb.net>
  * Mark Rowe <trac@bdash.net.nz> 
  * Matthew Good <trac@matt-good.net>
- * Christian Boos <cboos@wanadoo.fr>
+ * Christian Boos <cboos@neuf.fr>
 
 See also THANKS for people who have contributed to the project.
