First step towards MySQL support (#986): applied patch by Manuzhai and Adres Salomon that renames the columns in the `node_change` table to avoid a conflict with reserved words in MySQL.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@2882 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -37,6 +37,7 @@
  * Mark Rowe                      mark.rowe@bdash.net.nz
  * Olliver Rutherfurd             ollie
  * pkou                           pkou@ua.fm
+ * Andres Salomon                 dilinger@athenacr.com
  * Michael Scherer                misc@mandrake.org
  * Andreas Schrattenecker         vittorio
  * Emmeran Seehuber               rototor@rototor.de
@@ -47,6 +48,7 @@
  * Jani Tiainen                   redetin@luukku.com
  * Zilvinas Valinskas             zilvinas@gemtek.lt
  * Jason Vasquez                  jason@mugfu.com
+ * Jeff Weiss                     trac@jeffweiss.org
  * Dmitry Yusupov                 dmitry_yus@yahoo.com
 
 The ever so elusive Anonymous.
