--- a/THANKS
+++ b/THANKS
@@ -24,6 +24,7 @@
  * Ian Leader                     ian.leader@line.co.uk
  * Christopher Lenz               cmlenz@gmx.de
  * Ivo Looser                     ivo.looser@gmail.com
+ * Rui Lopes                      rgl ruilopes com
  * Angel Marin                    anmar@gmx.net
  * Keir Mierle                    keir@cs.utoronto.ca
  * James Moger                    jamesm@transonic.com
