Follow-up to r2536, show ''(root)'' as the path name in the changed file listing, when there's a property change on the root. Finalize the work done on #2369.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@3163 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -18,6 +18,7 @@
  * Stephen Hansen                 shansen@advpubtech.com
  * Laurie Harper                  zodiac@holoweb.net
  * Francois Harvey                fharvey@securiweb.net
+ * Tim Hatch                      trac@timhatch.com
  * Michael Hope                   michael.hope@hamjet.co.nz
  * Richard Hult                   richard@imendio.com
  * Nuutti Kotivuori               naked@iki.fi
