Added athomas and eblot to the list of authors, for Trac milestone:0.10.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@3478 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,5 +6,7 @@
  * Mark Rowe <trac@bdash.net.nz> 
  * Matthew Good <trac@matt-good.net>
  * Christian Boos <cboos@neuf.fr>
+ * Emmanual Blot <emmanuel.blot@free.fr>
+ * Alec Thomas <alec@swapoff.org>
 
 See also THANKS for people who have contributed to the project.
