For Great Justice!
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@3789 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -1,3 +1,4 @@
+ * Pedro Algarvio (s0undt3ch)     ufs@ufsoft.org
  * Brad Anderson                  brad@dsource.org
  * Christopher Armstrong          radix
  * Jani Averbach                  jaa@jaa.iki.fi
@@ -21,6 +22,7 @@
  * Tim Hatch                      trac@timhatch.com
  * Michael Hope                   michael.hope@hamjet.co.nz
  * Richard Hult                   richard@imendio.com
+ * Noah Kantrowitz (coderanger)   coderanger@yahoo.com
  * Waldemar Kornewald             wkornew@gmx.net
  * Nuutti Kotivuori               naked@iki.fi
  * Ian Leader                     ian.leader@line.co.uk
