Fixed the rendering of the blame view in Internet Explorer. Many thanks to mitsuhiko for suggesting the fix in a split second ;)
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4573 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -40,6 +40,7 @@
  * Cap Petschulat                 cap@cdres.com
  * Nicholas Riley                 sabi
  * Manuzhai                       manuzhai@gmail.com
+ * Armin Ronacher (mitsuhiko)     armin.ronacher@active-4.com
  * Mark Rowe                      mark.rowe@bdash.net.nz
  * Olliver Rutherfurd             ollie
  * pkou                           pkou@ua.fm
