remove broken link to picture of Diggs and Lula (fixes #4903)
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4948 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -61,7 +61,7 @@
 
 The ever so elusive Anonymous.
 
-`Diggs and Lula`_ (official pawprint contributors)
+Diggs and Lula (official pawprint contributors)
 
 And everyone who keeps sending feedback, helping us improve Trac.
 
@@ -69,5 +69,3 @@ And everyone who keeps sending feedback, helping us improve Trac.
 
 Our apologies to everyone we forgot to mention, but without whose invaluable
 help, Trac would not continue to rapidly evolve.
-
-.. _Diggs and Lula: http://people.edgewall.com/~daniel/lula_diggs.jpg
