Apply patch for the trac-pre-commit-hook contrib script, initially contributed by Robin@home.froosh.net and refreshed by Markus Tacker, in #2609.
I took this opportunity to add Markus in our THANKS file. Thanks for all your contributions so far, Markus!


git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4953 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -52,6 +52,7 @@
  * Noah Slater                    nslater@gmail.com
  * Bill Soudan                    bill@soudan.net
  * Ludvig Strigeus                
+ * Markus Tacker                  m@tacker.org
  * Alec Thomas                    alec@swapoff.org
  * Jani Tiainen                   redetin@luukku.com
  * Zilvinas Valinskas             zilvinas@gemtek.lt
