Added thatch, ecarter and nkantrowitz to the list of authors, for Trac milestone:0.11
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5908 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/AUTHORS
+++ b/AUTHORS
@@ -8,5 +8,8 @@
  * Christian Boos <cboos@neuf.fr>
  * Emmanual Blot <emmanuel.blot@free.fr>
  * Alec Thomas <alec@swapoff.org>
+ * Tim Hatch <trac@timhatch.com>
+ * Eli Carter <retracile@gmail.com>
+ * Noah Kantrowitz <kantrn+trac@rpi.edu>
 
 See also THANKS for people who have contributed to the project.
